[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/objects/objects.png" type="Texture" id=1]
[ext_resource path="res://maps/map_objects/InteractionBubble.tscn" type="PackedScene" id=2]
[ext_resource path="res://maps/map_objects/Tree.gd" type="Script" id=3]

[sub_resource type="PhysicsMaterial" id=8]
friction = 10.0
rough = true
bounce = 10.0
absorbent = true

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 12.3636, 14.0952 )

[sub_resource type="CircleShape2D" id=10]
radius = 26.9522

[node name="Tree" type="Sprite"]
position = Vector2( 94, 74 )
scale = Vector2( 1.375, 1.3125 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 78, 50, 62 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
physics_material_override = SubResource( 8 )

[node name="TreeCollision" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -0.72728, 14.0952 )
shape = SubResource( 11 )

[node name="InteractionArea" type="Area2D" parent="." groups=["Tree"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2( -7.62939e-06, 10.6667 )
shape = SubResource( 10 )

[node name="AnimatedSprite" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 11.6818, -13.5303 )
scale = Vector2( 0.225252, 0.225252 )

[connection signal="area_entered" from="InteractionArea" to="." method="_on_InteractionArea_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_InteractionArea_area_exited"]
